# zed-oc-api-seg

./: CMakeLists.txt  README.md
include/: sensorcapture.hpp
src/: main.cpp
